doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files\BlueJ\ProgramaJava\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
17
-classpath
C:\Program Files\BlueJ\ProgramaJava\lib\bluejcore.jar;C:\Program Files\BlueJ\ProgramaJava\lib\junit-jupiter-5.5.2.jar;C:\Program Files\BlueJ\ProgramaJava\lib\junit-jupiter-api-5.5.2.jar;C:\Program Files\BlueJ\ProgramaJava\lib\junit-jupiter-engine-5.5.2.jar;C:\Program Files\BlueJ\ProgramaJava\lib\junit-jupiter-migrationsupport-5.5.2.jar;C:\Program Files\BlueJ\ProgramaJava\lib\junit-jupiter-params-5.5.2.jar;C:\Program Files\BlueJ\ProgramaJava\lib\junit-platform-commons-1.5.2.jar;C:\Program Files\BlueJ\ProgramaJava\lib\junit-platform-console-1.5.2.jar;C:\Program Files\BlueJ\ProgramaJava\lib\junit-platform-console-standalone-1.5.2.jar;C:\Program Files\BlueJ\ProgramaJava\lib\junit-platform-engine-1.5.2.jar;C:\Program Files\BlueJ\ProgramaJava\lib\junit-platform-launcher-1.5.2.jar;C:\Program Files\BlueJ\ProgramaJava\lib\junit-platform-reporting-1.5.2.jar;C:\Program Files\BlueJ\ProgramaJava\lib\junit-platform-runner-1.5.2.jar;C:\Program Files\BlueJ\ProgramaJava\lib\junit-platform-suite-api-1.5.2.jar;C:\Program Files\BlueJ\ProgramaJava\lib\junit-platform-testkit-1.5.2.jar;C:\Program Files\BlueJ\ProgramaJava\lib\junit-quickcheck-core-0.9.jar;C:\Program Files\BlueJ\ProgramaJava\lib\junit-vintage-engine-5.5.2.jar;C:\Program Files\BlueJ\ProgramaJava\lib\hamcrest-core-1.3.jar;C:\Program Files\BlueJ\ProgramaJava\lib\hamcrest-library-1.3.jar;C:\Program Files\BlueJ\ProgramaJava\lib\lang-stride.jar;C:\Program Files\BlueJ\ProgramaJava\lib\javafx\lib\javafx.base.jar;C:\Program Files\BlueJ\ProgramaJava\lib\javafx\lib\javafx.controls.jar;C:\Program Files\BlueJ\ProgramaJava\lib\javafx\lib\javafx.fxml.jar;C:\Program Files\BlueJ\ProgramaJava\lib\javafx\lib\javafx.graphics.jar;C:\Program Files\BlueJ\ProgramaJava\lib\javafx\lib\javafx.media.jar;C:\Program Files\BlueJ\ProgramaJava\lib\javafx\lib\javafx.properties.jar;C:\Program Files\BlueJ\ProgramaJava\lib\javafx\lib\javafx.swing.jar;C:\Program Files\BlueJ\ProgramaJava\lib\javafx\lib\javafx.web.jar;C:\Users\tayan\Documents\UFAPE\newPast\educonnect
-d
C:\Users\tayan\Documents\UFAPE\newPast\educonnect\doc
-encoding
windows-1252
-charset
windows-1252
C:\Users\tayan\Documents\UFAPE\newPast\educonnect\src\main\java\br\com\educonnect\negocio\basica\Disciplina.java
<---- end of javadoc command ---->
Loading source file C:\Users\tayan\Documents\UFAPE\newPast\educonnect\src\main\java\br\com\educonnect\negocio\basica\Disciplina.java...
C:\Users\tayan\Documents\UFAPE\newPast\educonnect\src\main\java\br\com\educonnect\negocio\basica\Disciplina.java:9: error: <identifier> expected
    private  horario;
                    ^
1 error
